# kakao-work-bot

./: .cursorrules  .env.example  .gitignore  MEMORY_GUIDE.md  MIGRATION_GUIDE.md  README.md  README.mdgit  db_schema_v2.sql  index.js  kakao-bot.servicet  main.py  package-lock.json  package.json  prompt.text  pyproject.toml  supabase_migration.sql  test_db.py  test_onboarding_extraction.py  test_weekly_flow.py  test_weekly_flow_real_user.py
archive/nodejs/: package.json
public/: index.html  script.js  style.css
src/: database.py
src/chatbot/: __init__.py  agent_node.py  graph_manager.py  memory_manager.py  nodes.py  simple_chatbot.py  state.py  tools.py  utils.py  workflow.py
src/config/: __init__.py  business_config.py  config.py
src/core/: intent_classifier.py  summary_generator.py  weekly_feedback_generator.py
src/database/: __init__.py  conversation_repository.py  database.py  schemas.py  summary_repository.py  user_repository.py
src/helpers/: models.py  onboarding_questions.py  response_formatter.py
src/prompt/: daily_record_prompt.py  daily_summary.py  daily_summary_prompt.py  intent_classification.py  intent_classifier.py  intent_prompts.py  onboarding.py  onboarding_extraction.py  onboarding_questions.py  onboarding_v1.py  onboarding_v3.py  qa_agent.py  tools_prompt.py  weekly_agent.py  weekly_summary.py  weekly_summary_prompt.py
src/service/: __init__.py  intent_classifier.py  schemas.py  summary_generator.py  (+2 more)
tests/: TEST_GUIDE.md  TEST_GUIDE_v2.md  test_daily_prompt_quality.py  test_format_issue_analysis.py  test_intent_prompts_comparison.py
(+39 files in other folders)
